--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -56,7 +56,7 @@
   },
   "peerDependencies": {
     "@babel/core": "^7.9.6",
-    "@storybook/vue": "6.1.9",
+    "@storybook/vue": "6.2.0-alpha.0",
     "babel-loader": "^8.0.0",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
