--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-controls",
-  "version": "6.1.9",
+  "version": "6.2.0-alpha.0",
   "description": "Controls for component properties",
   "keywords": [
     "addon",
@@ -30,12 +30,12 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.1.9",
-    "@storybook/api": "6.1.9",
-    "@storybook/client-api": "6.1.9",
-    "@storybook/components": "6.1.9",
-    "@storybook/node-logger": "6.1.9",
-    "@storybook/theming": "6.1.9",
+    "@storybook/addons": "6.2.0-alpha.0",
+    "@storybook/api": "6.2.0-alpha.0",
+    "@storybook/client-api": "6.2.0-alpha.0",
+    "@storybook/components": "6.2.0-alpha.0",
+    "@storybook/node-logger": "6.2.0-alpha.0",
+    "@storybook/theming": "6.2.0-alpha.0",
     "core-js": "^3.0.1",
     "ts-dedent": "^2.0.0"
   },
