--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-jest",
-  "version": "6.1.9",
+  "version": "6.2.0-alpha.0",
   "description": "React storybook addon that show component jest report",
   "keywords": [
     "addon",
@@ -24,13 +24,6 @@
   "author": "Renaud Tertrais <renaud.tertrais@gmail.com> (https://github.com/renaudtertrais)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  },
   "files": [
     "dist/**/*",
     "README.md",
@@ -42,11 +35,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.1.9",
-    "@storybook/api": "6.1.9",
-    "@storybook/components": "6.1.9",
-    "@storybook/core-events": "6.1.9",
-    "@storybook/theming": "6.1.9",
+    "@storybook/addons": "6.2.0-alpha.0",
+    "@storybook/api": "6.2.0-alpha.0",
+    "@storybook/components": "6.2.0-alpha.0",
+    "@storybook/core-events": "6.2.0-alpha.0",
+    "@storybook/theming": "6.2.0-alpha.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react-sizeme": "^2.5.2",
@@ -71,5 +64,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "495a468d5eccaac706b6b8b52e9dbc5a484027a4"
+  "gitHead": "495a468d5eccaac706b6b8b52e9dbc5a484027a4",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  }
 }
