Update git head to 6.2.0-alpha.0

--- a/addons/viewport/package.json
+++ b/addons/viewport/package.json
@@ -18,6 +18,13 @@
   "license": "MIT",
   "main": "dist/preview.js",
   "types": "dist/preview.d.ts",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  },
   "files": [
     "dist/**/*",
     "README.md",
@@ -56,12 +63,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "495a468d5eccaac706b6b8b52e9dbc5a484027a4",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  }
+  "gitHead": "c44dc96274577a6f1c4006c88b0f9db524e821c4"
 }
