--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -18,13 +18,6 @@
   },
   "license": "MIT",
   "author": "Storybook Team",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  },
   "bin": {
     "getstorybook": "./bin/index.js",
     "sb": "./bin/index.js"
@@ -83,5 +76,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c44dc96274577a6f1c4006c88b0f9db524e821c4"
+  "gitHead": "c44dc96274577a6f1c4006c88b0f9db524e821c4",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  }
 }
