--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-docs",
-  "version": "6.2.0-alpha.0",
+  "version": "6.2.0-alpha.1",
   "description": "Superior documentation for your components",
   "keywords": [
     "addon",
@@ -19,6 +19,13 @@
   "license": "MIT",
   "main": "dist/public_api.js",
   "types": "dist/public_api.d.ts",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  },
   "files": [
     "dist/**/*",
     "angular/**/*",
@@ -48,18 +55,18 @@
     "@mdx-js/loader": "^1.6.19",
     "@mdx-js/mdx": "^1.6.19",
     "@mdx-js/react": "^1.6.19",
-    "@storybook/addons": "6.2.0-alpha.0",
-    "@storybook/api": "6.2.0-alpha.0",
-    "@storybook/client-api": "6.2.0-alpha.0",
-    "@storybook/client-logger": "6.2.0-alpha.0",
-    "@storybook/components": "6.2.0-alpha.0",
-    "@storybook/core": "6.2.0-alpha.0",
-    "@storybook/core-events": "6.2.0-alpha.0",
+    "@storybook/addons": "6.2.0-alpha.1",
+    "@storybook/api": "6.2.0-alpha.1",
+    "@storybook/client-api": "6.2.0-alpha.1",
+    "@storybook/client-logger": "6.2.0-alpha.1",
+    "@storybook/components": "6.2.0-alpha.1",
+    "@storybook/core": "6.2.0-alpha.1",
+    "@storybook/core-events": "6.2.0-alpha.1",
     "@storybook/csf": "0.0.1",
-    "@storybook/node-logger": "6.2.0-alpha.0",
-    "@storybook/postinstall": "6.2.0-alpha.0",
-    "@storybook/source-loader": "6.2.0-alpha.0",
-    "@storybook/theming": "6.2.0-alpha.0",
+    "@storybook/node-logger": "6.2.0-alpha.1",
+    "@storybook/postinstall": "6.2.0-alpha.1",
+    "@storybook/source-loader": "6.2.0-alpha.1",
+    "@storybook/theming": "6.2.0-alpha.1",
     "acorn": "^7.1.0",
     "acorn-jsx": "^5.1.0",
     "acorn-walk": "^7.0.0",
@@ -85,9 +92,9 @@
     "@babel/core": "^7.12.3",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.23",
-    "@storybook/react": "6.2.0-alpha.0",
-    "@storybook/vue": "6.2.0-alpha.0",
-    "@storybook/web-components": "6.2.0-alpha.0",
+    "@storybook/react": "6.2.0-alpha.1",
+    "@storybook/vue": "6.2.0-alpha.1",
+    "@storybook/web-components": "6.2.0-alpha.1",
     "@types/cross-spawn": "^6.0.1",
     "@types/doctrine": "^0.0.3",
     "@types/enzyme": "^3.10.3",
@@ -147,12 +154,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c44dc96274577a6f1c4006c88b0f9db524e821c4",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  }
+  "gitHead": "c44dc96274577a6f1c4006c88b0f9db524e821c4"
 }
