--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -118,7 +118,7 @@
     "tmp": "^0.2.1",
     "tslib": "^2.0.0",
     "web-component-analyzer": "^1.0.3",
-    "webpack": "^4.44.2",
+    "webpack": "^5.9.0",
     "zone.js": "^0.11.3"
   },
   "peerDependencies": {
@@ -129,7 +129,7 @@
     "react-dom": "^16.8.0 || ^17.0.0",
     "sveltedoc-parser": "^3.0.4",
     "vue": "^2.6.10",
-    "webpack": ">=4"
+    "webpack": "*"
   },
   "peerDependenciesMeta": {
     "@storybook/vue": {
