--- a/app/marko/package.json
+++ b/app/marko/package.json
@@ -53,7 +53,7 @@
   "peerDependencies": {
     "@babel/core": "*",
     "marko": "^4.15.2 || ^5.0.0-next || ^5",
-    "webpack": "^4.44.2"
+    "webpack": "*"
   },
   "engines": {
     "node": ">=8.0.0"
