--- a/examples/cra-ts-kitchen-sink/package.json
+++ b/examples/cra-ts-kitchen-sink/package.json
@@ -23,7 +23,7 @@
     ]
   },
   "dependencies": {
-    "@types/jest": "26.0.16",
+    "@types/jest": "^26.0.16",
     "@types/node": "14.14.10",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.8",
