--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storybook/addon-docs",
   "version": "6.2.0-alpha.7",
-  "description": "Superior documentation for your components",
+  "description": "Document component usage and properties in Markdown",
   "keywords": [
     "addon",
     "notes",
