--- a/addons/actions/package.json
+++ b/addons/actions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storybook/addon-actions",
   "version": "6.2.0-alpha.7",
-  "description": "Action Logger addon for storybook",
+  "description": "Get UI feedback when an action is performed on an interactive element",
   "keywords": [
     "storybook"
   ],
