--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storybook/addon-backgrounds",
   "version": "6.2.0-alpha.7",
-  "description": "A storybook addon to show different backgrounds for your preview",
+  "description": "Switch backgrounds to view components in different settings",
   "keywords": [
     "addon",
     "background",
