--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storybook/addon-controls",
   "version": "6.2.0-alpha.7",
-  "description": "Controls for component properties",
+  "description": "Interact with component inputs dynamically in the Storybook UI",
   "keywords": [
     "addon",
     "storybook",
