--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storybook/addon-storyshots",
   "version": "6.2.0-alpha.7",
-  "description": "StoryShots is a Jest Snapshot Testing Addon for Storybook.",
+  "description": "Take a code snapshot of every story automatically with Jest",
   "keywords": [
     "addon",
     "storybook"
