chore: bump `@nrwl/workspace` to `11.1.4`
Signed-off-by: Gaëtan Maisse <gaetanmaisse@gmail.com>

--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -73,7 +73,7 @@
     "@angular/forms": "^11.0.0",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
-    "@nrwl/workspace": ">=11.1.0",
+    "@nrwl/workspace": "^11.1.4",
     "@types/autoprefixer": "^9.4.0",
     "@types/jest": "^25.1.1",
     "jest": "^26.0.0",
