--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@storybook/addon-jest",
   "version": "6.2.0-alpha.16",
-  "description": "React storybook addon that show component jest report",
+  "description": "An addon that shows component jest report",
   "keywords": [
     "addon",
     "jest",
@@ -9,7 +9,8 @@
     "report",
     "results",
     "storybook",
-    "unit-testing"
+    "unit-testing",
+    "test"
   ],
   "homepage": "https://github.com/storybookjs/storybook/tree/master/addons/jest",
   "bugs": {
@@ -71,5 +72,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "2cc64efa1dcb90b72806d4c88c295f38dd92e427"
+  "gitHead": "2cc64efa1dcb90b72806d4c88c295f38dd92e427",
+  "storybook": {
+    "displayName": "Jest",
+    "icon": "https://pbs.twimg.com/profile_images/821713465245102080/mMtKIMax_400x400.jpg",
+    "unsupportedFrameworks": [
+      "react-native"
+    ]
+  }
 }
