--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -6,7 +6,9 @@
     "addon",
     "background",
     "react",
-    "storybook"
+    "storybook",
+    "essentials",
+    "design"
   ],
   "homepage": "https://github.com/storybookjs/storybook/tree/master/addons/backgrounds",
   "bugs": {
@@ -70,5 +72,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "2cc64efa1dcb90b72806d4c88c295f38dd92e427"
+  "gitHead": "2cc64efa1dcb90b72806d4c88c295f38dd92e427",
+  "storybook": {
+    "displayName": "Backgrounds",
+    "icon": "https://user-images.githubusercontent.com/263385/101991667-479cc600-3c7c-11eb-96d3-410e936252e7.png",
+    "unsupportedFrameworks": [
+      "react-native"
+    ]
+  }
 }
