--- a/addons/design-assets/package.json
+++ b/addons/design-assets/package.json
@@ -68,5 +68,11 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "2cc64efa1dcb90b72806d4c88c295f38dd92e427"
+  "gitHead": "2cc64efa1dcb90b72806d4c88c295f38dd92e427",
+  "storybook": {
+    "displayName": "Design assets",
+    "unsupportedFrameworks": [
+      "react-native"
+    ]
+  }
 }
