--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -40,6 +40,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
+    "@hypnosphi/react-sizeme": "^2.6.13",
     "@storybook/addons": "6.2.0-alpha.18",
     "@storybook/api": "6.2.0-alpha.18",
     "@storybook/channels": "6.2.0-alpha.18",
@@ -52,7 +53,6 @@
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "lodash": "^4.17.20",
-    "react-sizeme": "^2.6.12",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
     "util-deprecate": "^1.0.2"
