--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -42,6 +42,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
+    "@hypnosphi/react-sizeme": "^2.6.13",
     "@storybook/addons": "6.2.0-alpha.18",
     "@storybook/api": "6.2.0-alpha.18",
     "@storybook/components": "6.2.0-alpha.18",
@@ -49,7 +50,6 @@
     "@storybook/theming": "6.2.0-alpha.18",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
-    "react-sizeme": "^2.6.12",
     "regenerator-runtime": "^0.13.7",
     "upath": "^1.2.0"
   },
