--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@storybook/addons": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@storybook/node-logger": "6.2.0-alpha.20",
     "@types/webpack-env": "^1.16.0",
     "autoprefixer": "^9.8.6",
