--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@ember/test-helpers": "^2.1.4",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
