--- a/app/html/package.json
+++ b/app/html/package.json
@@ -44,6 +44,7 @@
     "@storybook/addons": "6.2.0-alpha.20",
     "@storybook/client-api": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
