--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "common-tags": "^1.8.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
