--- a/app/rax/package.json
+++ b/app/rax/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "babel-preset-rax": "^1.0.0-beta.0",
     "core-js": "^3.8.2",
     "driver-dom": "^2.2.0",
