--- a/app/react/package.json
+++ b/app/react/package.json
@@ -47,6 +47,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "@storybook/addons": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@storybook/node-logger": "6.2.0-alpha.20",
     "@storybook/semver": "^7.3.2",
     "@types/webpack-env": "^1.16.0",
