--- a/app/riot/package.json
+++ b/app/riot/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
     "raw-loader": "^4.0.2",
