--- a/app/server/package.json
+++ b/app/server/package.json
@@ -45,6 +45,7 @@
     "@storybook/api": "6.2.0-alpha.20",
     "@storybook/client-api": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@storybook/node-logger": "6.2.0-alpha.20",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
