--- a/app/vue3/package.json
+++ b/app/vue3/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@storybook/addons": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@types/webpack-env": "^1.16.0",
     "core-js": "^3.8.2",
     "global": "^4.4.0",
