--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -49,6 +49,7 @@
     "@storybook/addons": "6.2.0-alpha.20",
     "@storybook/client-api": "6.2.0-alpha.20",
     "@storybook/core": "6.2.0-alpha.20",
+    "@storybook/core-common": "6.2.0-alpha.20",
     "@types/webpack-env": "^1.16.0",
     "babel-plugin-bundled-import-meta": "^0.3.1",
     "core-js": "^3.8.2",
