updates, & fix webpack 4 & 5 typings mismatching

--- a/lib/builder-webpack4/package.json
+++ b/lib/builder-webpack4/package.json
@@ -58,8 +58,8 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@storybook/addons": "6.2.0-alpha.24",
-    "@storybook/node-logger": "6.2.0-alpha.24",
     "@storybook/core-common": "6.2.0-alpha.24",
+    "@storybook/node-logger": "6.2.0-alpha.24",
     "@storybook/semver": "^7.3.2",
     "@storybook/theming": "6.2.0-alpha.24",
     "@storybook/ui": "6.2.0-alpha.24",
@@ -67,12 +67,13 @@
     "@types/micromatch": "^4.0.1",
     "@types/node": "^14.0.10",
     "@types/node-fetch": "^2.5.7",
+    "@types/webpack": "^4.41.26",
     "airbnb-js-shims": "^2.2.1",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^10.0.33",
     "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-polyfill-corejs3": "^0.0.7",
+    "babel-plugin-polyfill-corejs3": "^0.1.0",
     "better-opn": "^2.1.1",
     "boxen": "^4.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
