--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -35,9 +35,11 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "6.2.0-alpha.24",
+    "@storybook/builder-webpack4": "6.2.0-alpha.24",
     "@storybook/addons": "6.2.0-alpha.24",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "6.2.0-alpha.24"
+    "@storybook/react": "6.2.0-alpha.24",
+    "webpack": "4"
   },
   "storybook": {
     "chromatic": {
