--- a/package.json
+++ b/package.json
@@ -33,16 +33,20 @@
     "type": "git",
     "url": "https://github.com/storybookjs/storybook.git"
   },
-  "workspaces": [
-    "addons/*",
-    "addons/storyshots/*",
-    "app/*",
-    "dev-kits/*",
-    "examples-native/*",
-    "examples/*",
-    "lib/*",
-    "lib/cli/test/run/*"
-  ],
+
+  "workspaces": {
+    "packages": [
+      "addons/*",
+      "addons/storyshots/*",
+      "app/*",
+      "dev-kits/*",
+      "examples-native/*",
+      "examples/*",
+      "lib/*",
+      "lib/cli/test/run/*"
+    ],
+    "nohoist": ["webpack", "*-webpack-*", "**/*-webpack-*"]
+  },
   "scripts": {
     "await-serve-storybooks": "wait-on http://localhost:8001",
     "bootstrap": "node ./scripts/bootstrap.js",
