--- a/examples/vue-3-cli/package.json
+++ b/examples/vue-3-cli/package.json
@@ -23,7 +23,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-loader": "^8.2.2",
-    "typescript": "^3.9.7",
+    "typescript": "~3.9.3",
+    "vue-jest": "^5.0.0-alpha.8",
     "vue-loader": "^16.1.2"
   }
 }
